Style cards and add relevant text

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ html {
 }
 html, body {
     margin: 0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 h1, h2, h3, p {
     margin: 0;
@@ -30,15 +31,20 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 2rem;
 }
 .main-title {
+    height: 20vh;
     font-size: 3rem;
+    display: flex;
     text-align: center;
+    align-items: center;
 }
 
 /* card container */
 .card-container {
     width: 100%;
+    padding: 1rem;
     display: grid;
     grid-template-rows: 1fr;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
@@ -47,6 +53,14 @@ main {
     background-color: var(--main-color);
 }
 .card {
-    text-align: center;
+    padding: 1.5rem 1.2rem;
     background-color: var(--second-color);
+    border-radius: 1rem;
+}
+.book-title {
+    text-align: center;
+    padding-bottom: 1rem;
+}
+.card span {
+    font-weight: 700;
 }
