Add function to create new cards w/ books

--- a/style.css
+++ b/style.css
@@ -66,10 +66,7 @@ main {
 }
 
 /* Form */
-.form-container h2 {
-    margin-bottom: 1rem;
-}
-form input:not(:last-of-type) {
+form input:not(:last-of-type), .form-container h2 {
     margin-bottom: 1rem;
 }
 .btn-container {
