--- a/style.css
+++ b/style.css
@@ -9,21 +9,32 @@ html {
     box-sizing: inherit;
 }
 :root {
-    --main-color: #eee;
-    --second-color: #B4D455;
+    --main-color: #1d3557;
+    --second-color: #a8dadc;
+    --third-color: #457b9d;
+    --side-color: #f1faee;
+    --contrast-color: #e63946;
+    --gray: whitesmoke;
 }
 html, body {
     margin: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    width: 100%;
+    height: 100%;
 }
 h1, h2, h3, p {
     margin: 0;
 }
 
+/* Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
+
 /* Main */
 body {
+    padding-bottom: 1rem;
     display: flex;
     justify-content: center;
+    background-color: var(--side-color);
 }
 main {
     width: 90%;
@@ -36,6 +47,7 @@ main {
 .main-title {
     height: 20vh;
     font-size: 3rem;
+    font-family: 'Playfair Display', serif;
     display: flex;
     text-align: center;
     align-items: center;
@@ -47,12 +59,13 @@ main {
     padding: 1rem;
     display: grid;
     grid-template-rows: 1fr;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     grid-auto-rows: 1fr;
     gap: 2rem;
     background-color: var(--main-color);
 }
 .card {
+    height: max-content;
     position: relative;
     padding: 1.5rem 1.2rem;
     background-color: var(--second-color);
@@ -81,15 +94,31 @@ form input:not([type="radio"]), .form-container h2 {
     border: none;
     cursor: pointer;
     font-weight: 700;
-    opacity: 0.8;
+}
+.btn.show-options {
+    transition: all .1s ease-in-out;
+    border: 1px solid var(--main-color);
+}
+.btn.add-book {
+    background-color: var(--third-color);
+    color: var(--gray);
 }
 .show-form {
     display: none;
     border: 3px solid #f1f1f1;
 }
+/* Show-form animation */
+.show-form.active {
+    animation: scale-display .4s;
+}
+.show-form.out {
+    animation: scale-display--reversed .4s;
+    animation-fill-mode:forwards;
+}
+
 .form-container {
     padding: 10px;
-    background-color: white;
+    background-color: var(--second-color);
 }
 .form-container input {
     display: block;
@@ -98,11 +127,11 @@ form input:not([type="radio"]), .form-container h2 {
     background: #f1f1f1;
 }
 .form-container .hide-options {
-    background-color: red;
-    color: whitesmoke;
+    background-color: var(--contrast-color);
+    color: var(--gray);
 }
-.btn:hover {
-    opacity: 1;
+.btn.show-options:hover {
+    scale: 1.05;
 }
 
 /* Close icon */
@@ -128,4 +157,32 @@ form input:not([type="radio"]), .form-container h2 {
 input[type="radio"] {
     display: inline-block;
     margin-left: 1rem;
+}
+
+/* Show-form animation keyframes */
+@keyframes scale-display {
+	0% {
+		opacity: 0;
+		transform: scale(0);
+    -webkit-transform: scale(0);
+	}
+
+	100% {
+		opacity: 1;
+		transform: scale(1);
+    -webkit-transform: scale(1);
+	}
+}
+
+@keyframes scale-display--reversed {
+	0% {
+		opacity: 1;
+		transform: scale(1);
+		-webkit-transform: scale(1);
+	}
+	100% {
+		opacity: 0;
+		transform: scale(0);
+		-webkit-transform: scale(0);
+	}
 }
